# omada_backup

./: Cargo.toml  README.md
.github/workflows/: build.yml  create-release.yml  dependabot-auto-merge.yml  rust-clippy.yml
src/: main.rs
src/client/: api_models.rs  helpers.rs  mod.rs  omada_client.rs
