[package]
name = "omada_backup"
authors = ["Jacob Millward <jacob@millward.dev>"]
description = "A utility for downloading backups of a TP-Link Omada SDN Controller"
repository = "https://github.com/JacobMillward/omada_backup"
version = "0.6.0"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "3.1.14", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
ureq = { version = "2.4.0", features = ["json", "cookies", "native-tls"] }
native-tls = "0.2.10"
url = "2.2.2"
log = "0.4.16"
env_logger = "0.9.0"
serde = {version = "1.0", features = ["derive"] }
percent-encoding = "2.1.0"
normpath = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1