[package]
name = "omada_backup"
authors = ["Jacob Millward <jacob@millward.dev>"]
description = "A utility for downloading backups of a TP-Link Omada SDN Controller"
repository = "https://github.com/JacobMillward/omada_backup"
version = "1.1.0"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "3.1.14", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
ureq = { version = "2.5.0", features = ["json", "cookies", "native-tls"] }
native-tls = "0.2.11"
url = "2.2.2"
log = "0.4.17"
env_logger = "0.10.0"
serde = {version = "1.0", features = ["derive"] }
percent-encoding = "2.2.0"
normpath = "1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1