[package]
name = "omada_backup"
authors = ["Jacob Millward <jacob@millward.dev>"]
description = "A utility for downloading backups of a TP-Link Omada SDN Controller"
repository = "https://github.com/JacobMillward/omada_backup"
version = "1.1.0"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
ureq = { version = "2.7.1", features = ["json", "cookies", "native-tls"] }
native-tls = "0.2.11"
url = "2.4.1"
log = "0.4.20"
env_logger = "0.10.0"
serde = {version = "1.0", features = ["derive"] }
percent-encoding = "2.3.0"
normpath = "1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1